@@ -1,13 +1,15 @@
 package de.haraldrichter.car_rental_service.security;
 
-import de.haraldrichter.car_rental_service.model.Role;
 import de.haraldrichter.car_rental_service.model.User;
 import de.haraldrichter.car_rental_service.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+
+import java.util.stream.Collectors;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -17,18 +19,35 @@ public class CustomUserDetailsService implements UserDetailsService {
         this.userRepository = userRepository;
     }
 
+//    @Override
+//    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+//        User user = userRepository.findUserByEmail(email)
+//                .orElseThrow(() -> new UsernameNotFoundException("Benutzer nicht gefunden"));
+//
+//        return org.springframework.security.core.userdetails.User.builder()
+//                .username(user.getEmail())
+//                .password(user.getPassword())
+//                .authorities(user.getRoles().stream()
+//                        .map(Role::getName)
+//                        .toList()
+//                        .toArray(new String[0]))
+//                .build();
+//    }
+
+
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         User user = userRepository.findUserByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("Benutzer nicht gefunden"));
+                .orElseThrow(() -> new UsernameNotFoundException("User not found for email " + email));
 
-        return org.springframework.security.core.userdetails.User.builder()
-                .username(user.getEmail())
-                .password(user.getPassword())
-                .authorities(user.getRoles().stream()
-                        .map(Role::getName)
-                        .toList()
-                        .toArray(new String[0]))
-                .build();
+        return new CustomUserDetails(
+                user.getId(),
+                user.getEmail(),
+                user.getPassword(),
+                user.getRoles().stream()
+                        .map(role -> new SimpleGrantedAuthority(role.getName()))
+                        .collect(Collectors.toList())
+        );
     }
+
 }
